--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "@angular/router": "~7.1.4",
     "@auth0/angular-jwt": "^2.1.0",
     "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/google-play-games-services": "^5.0.0-beta.22",
+    "@ionic-native/google-plus": "^5.0.0-beta.22",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googleplus": "6.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
-    "cordova-plugin-play-games-services": "1.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -70,9 +70,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-play-games-services": {
-        "APP_ID": "231013865024-d6trq32sl9mdi9v4dcks9oc51jpo0a01.apps.googleusercontent.com"
-      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -80,7 +77,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "TO_DEFINE",
+        "WEB_APPLICATION_CLIENT_ID": "862749637734-i55p7r6mnqmmsnjau01jjm64r9dkqdme.apps.googleusercontent.com",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      }
     },
     "platforms": [
       "android"
